@@ -6,8 +6,8 @@ package: Testing
 dependencies:
   - metatag:metatag
 
-# Information added by Drupal.org packaging script on 2018-08-21
-version: '8.x-1.6'
+# Information added by Drupal.org packaging script on 2018-08-31
+version: '8.x-1.7'
 core: '8.x'
 project: 'metatag'
-datestamp: 1534867990
+datestamp: 1535726412
