@@ -1,3 +1,11 @@
+Metatag 8.x-1.7, 2018-08-31
+---------------------------
+#2994979 by DamienMcKenna, dspachos, ynotpeanutbutter, oxy86, IT-Cru, kdeds,
+  zenimagine: Fixed backwards compatibility break when support for multiple-
+  value tags was added.
+#2990923 by th_tushar, DamienMcKenna: Fixed  coding standards.
+
+
 Metatag 8.x-1.6, 2018-08-21
 ---------------------------
 #2961777 by thejimbirch, Baysaa: "Geographical position" (geo.position) should
